<resources>
    <string name="maps_api_key">AIzaSyDrqznB93GKpCyQY3rSQ9yNLLvME-dPDLE</string>
    <string name="awareness_api_key">AIzaSyC4Ygxn2dKbAvR-BcBUSHJ4qK35jbHJoNk</string>
    <string name="geocoding_api_key">AIzaSyBzMIX6UM_laa3R-Ht1KjPr2x1xUWPrNyg</string>
    <string name="maps_static_api_key">AIzaSyCBt6kPozCEvAN_scD5DLIt7qZ3T_jNZ3U</string>
    <string name="streetview_api_key">AIzaSyDp_owv2HnZz6m6TYPoJjnj5EhaDRON1_k</string>
    <string name="frag_title_clientes">Clientes</string>
    <string name="frag_title_catalogo">Catálogo</string>
    <string name="frag_title_directorio">Dire</string>
    <string name="login_field_usuario_hint">Usuario</string>
    <string name="login_field_contra_hint">Contraseña</string>
    <string name="login_button_login">Iniciar sesión</string>
    <string name="login_error_usuario_vacio">El campo de usuario no puede ir vacío</string>
    <string name="login_error_contra_vacia">El campo de contraseña no puede ir vacío</string>
    <string name="login_error_login">"Verifica tu Usuario ,contraseña y conexión a internet"</string>
    <string name="login_success">Sesión iniciada correctamente!</string>
    <string name="title_activity_menu">Emaus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="clientes_titulo_nohay">No has agregado clientes</string>
    <string name="nuevocliente_title">Nuevo Cliente</string>
    <string name="nuevocliente_hint_nombre">Nombres</string>
    <string name="nuevocliente_hint_apellido">Apellidos</string>
    <string name="nuevocliente_genero_masculino">Masculino</string>
    <string name="nuevocliente_genero_femenino">Femenino</string>
    <string name="nuevocliente_hint_fecha">Fecha de nacimiento</string>
    <string-array name="array_meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="nuevocliente_formatted_fecha">%1$d / %2$s / %3$d</string>
    <string name="nuevocliente_prompt_estadocivil">Estado civil</string>
    <string-array name="array_estadoCivil">
        <item>Soltero</item>
        <item>Casado</item>
        <item>Viudo</item>
        <item>Divorciado</item>
        <item>Unión Libre</item>
        <item>Comprometido</item>
    </string-array>
    <string-array name="array_genero">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="nuevocliente_hint_ocupacion">Ocupación</string>
    <string name="nuevocliente_button_nuevocliente">Añadir Nuevo Cliente</string>
    <string-array name="array_status">
        <item>Prospecto</item>
        <item>En Verificación</item>
        <item>Activo</item>
    </string-array>
    <string name="nuevocliente_error_nombre">Debes ingresar un nombre</string>
    <string name="nuevocliente_hint_telefono">Teléfono</string>
    <string name="nuevocliente_prompt_telefonos">Tipo</string>
    <string-array name="array_telefonos">
        <item>Celular</item>
        <item>Casa</item>
        <item>Oficina</item>
        <item>Otro</item>
    </string-array>
    <string name="nuevocliente_error_apellido">Debes ingresar los apellidos</string>
    <string name="nuevocliente_error_genero">Elige el género del cliente</string>
    <string name="nuevocliente_error_fechanac">Ingresa la fecha de nacimiento</string>
    <string name="nuevocliente_error_estadocivil">Selecciona el estado civil del cliente</string>
    <string name="nuevocliente_error_ocupacion">Escribe la ocupación del cliente</string>
    <string name="nuevocliente_title_nuevoTelefono">Teléfonos</string>
    <string name="nuevocliente_title_direccion">Dirección</string>
    <string name="nuevocliente_title_agregarTelefono">Agregar teléfono</string>
    <string name="nuevocliente_title_agregarDireccion">Agregar dirección</string>
    <string name="nuevocliente_hint_correo">E-mail</string>
    <string name="nuevocliente_prompt_religion">Religión</string>
    <string name="nuevocliente_error_cp">*5 dígitos</string>
    <string-array name="array_religiones">
        <item>Católica</item>
        <item>Cristiana</item>
        <item>Testigo de Jehová</item>
        <item>Judía</item>
        <item>Ateo</item>
        <item>Mormón</item>
        <item>Otra</item>
    </string-array>
    <string-array name="array_direcciones">
        <item>Casa</item>
        <item>Oficina</item>
        <item>Particular</item>
        <item>Otro</item>
    </string-array>
    <string name="nuevocliente_prompt_notas">Notas</string>
    <string name="nuevocliente_error_telefonovacio">Ingresa un teléfono válido</string>
    <string name="nuevocliente_error_telefonotipovacio">Elige el tipo</string>
    <string name="nuevocliente_label_buscardireccion">Ubicar en el mapa</string>
    <string name="itemdir_error_calle">Ingresa la calle y el número</string>
    <string name="itemdir_error_cp">Verificar</string>
    <string name="itemdir_error_colonia">Ingresa la colonia</string>
    <string name="itemdir_url_geocoding">https://maps.googleapis.com/maps/api/geocode/json?address=%s&amp;key=AIzaSyBzMIX6UM_laa3R-Ht1KjPr2x1xUWPrNyg</string>
    <string name="itemdir_url_mapsnapshots">https://maps.googleapis.com/maps/api/staticmap?zoom=15&amp;size=600x240&amp;maptype=roadmap&amp;markers=%.6f,%.6f&amp;key=AIzaSyCBt6kPozCEvAN_scD5DLIt7qZ3T_jNZ3U</string>
    <string name="title_activity_main_tabs">MainTabs</string>
    <string name="tab_text_A">INFO</string>
    <string name="tab_text_B">PLANES</string>
    <string name="tab_text_1">Clientes</string>
    <string name="tab_text_2">Catálogo</string>
    <string name="tab_text_3">Directorio</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalle_cliente">Cliente</string>
    <string name="detallecliente_button_anadirplan">AÑADIR PLAN</string>
    <string name="detallecliente_label_fecharegistro">Fecha de Registro</string>
    <string name="detallecliente_label_vendedor">Vendedor</string>
    <string name="detallecliente_label_notas">Notas</string>
    <string name="detallecliente_label_ocupacion">Ocupación</string>
    <string name="detallecliente_label_estadocivil">Estado civil</string>
    <string name="detallecliente_label_fecnac">Fecha de nacimiento</string>
    <string name="detallecliente_label_genero">Género</string>
    <string name="detallecliente_label_religion">Religión</string>
    <string name="detallecliente_label_email">E-mail</string>
    <string name="detallecliente_label_telefono">Teléfonos</string>
    <string name="detallecliente_label_direccion">Direcciones</string>
    <string name="format_cantidad">$%s</string>
    <string name="format_porcientos">%d%%</string>
    <string name="item_pagado">Pagado</string>
    <string name="detallecliente_format_letras">%s%s</string>
    <string name="detallecliente_format_nomap">%s %s</string>
    <string name="crearplan_format_texto_mensualidades">%d Mensualidades de</string>
    <string name="crearplan_format_dinero">$%s</string>
    <string name="crearplan_error_anticipo">El anticipo debe ser mínimo de %s</string>
    <string name="crearplan_error_anticipo_gral">El anticipo debe ser menor al total del saldo y mayor o igual a un ciclo de pago</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="title_activity_nuevo_plan">NuevoPlan</string>
    <string name="planes_frag_prompt_nohay">No existen planes para este cliente</string>
    <string name="format_cobro">Cobro %d</string>
    <string name="format_fulldireccion">%s %s CP %s</string>
    <string name="nuevoplan_prompt_planes">Tipo de plan</string>
    <string-array name="nuevoplan_array_planes">
        <item>Básico</item>
        <item>Lujo</item>
        <item>Madera</item>
    </string-array>
    <string name="nuevoplan_prompt_ataud">Modelo de ataúd</string>
    <string-array name="nuevoplan_array_planbasico">
        <item>Egipcio</item>
        <item>Faraón</item>
        <item>Estándar</item>
    </string-array>
    <string-array name="nuevoplan_array_planLujo">
        <item>Lujo Estándar</item>
        <item>Lujo Premium</item>
    </string-array>
    <string-array name="nuevoplan_array_planmadera">
        <item>Esmeralda</item>
        <item>Madera de lujo</item>
    </string-array>
    <string name="nuevoplan_prompt_servicio">Servicio</string>
    <string-array name="nuevoplan_array_servicio">
        <item>Domicilio</item>
        <item>Capilla</item>
    </string-array>
    <string name="nuevoplan_prompt_financiamiento">Financiamiento</string>
    <string-array name="nuevoplan_array_financiamiento">
        <item>Contado</item>
        <item>12 Meses</item>
        <item>24 Meses</item>
        <item>36 Meses</item>
    </string-array>
    <string name="nuevoplan_prompt_descuentos">Descuentos</string>
    <string name="nuevoplan_prompt_descuentos_contado">Descuentos de contado</string>
    <string name="nuevoplan_prompt_descuentos_financiamiento">Descuentos de financiamiento</string>
    <string name="nuevoplan_prompt_pago">Frecuencia de pagos</string>
    <string name="nuevoplan_prompt_pago_contado">Pago de contado</string>
    <string-array name="nuevoplan_array_pago">
        <item>Pago único</item>
        <item>Quincenales</item>
        <item>Mensuales</item>
        <item>Semestrales</item>
    </string-array>
    <string name="nuevoplan_label_montocontrato">Total a pagar</string>
    <string name="nuevoplan_label_saldo">Saldo</string>
    <string name="nuevoplan_label_titulodescuento">DESCUENTO</string>
    <string name="nuevoplan_label_titulopago">PAGO</string>
    <string name="nuevoplan_prompt_formapago">Forma de pago</string>
    <string-array name="nuevoplan_array_formapago">
        <item>Cobranza Emaús</item>
        <item>Mercado Zaragoza</item>
        <item>Oxxo</item>
        <item>Ley</item>
    </string-array>
    <string name="nuevoplan_hint_anticipo">Anticipo</string>
    <string name="nuevoplan_label_facturar">Facturar</string>
    <string name="nuevoplan_hint_rfc">RFC</string>
    <string name="nuevoplan_hint_email">E-mail</string>
    <string name="nuevoplan_titulo_comprobantes">COMPROBANTES</string>
    <string name="nuevoplan_label_inefrontal">INE FRONTAL</string>
    <string name="nuevoplan_label_inereverso">INE REVERSO</string>
    <string name="nuevoplan_label_comprobante">COMPROBANTE DOMICILIO</string>
    <string name="nuevoplan_label_tarjeta_descuento">TARJETA DESCUENTO</string>
    <string name="nuevoplan_label_titulocamera">Cámara</string>
    <string name="nuevoplan_label_titulogaleria">Galería</string>
    <string name="nuevoplan_label_tituloimagencon">Cargar imagen mediante:</string>
    <string name="nuevoplan_formatted_monto">$%1$s.00</string>
    <string name="nuevoplan_format_labeldescuento">%d%% de Descuento</string>
    <string name="nuevoplan_format_numeropagos">%d pago(s) de %s</string>
    <string name="nuevoplan_sindescuento">Sin descuento</string>
    <string name="nuevoplan_error_plan">Elige correctamente entre las opciones de los planes</string>
    <string name="nuevoplan_error_comprobantes">Verifica las imágenes de comprobantes de domicilio e identidad</string>
    <string name="nuevoplan_error_descuento">Verifica la imagen de comprobante de descuento o elige la opción SIN DESCUENTO</string>
    <string name="nuevoplan_error_meses">Elige la cantidad de meses en el financiamiento</string>
    <string name="nuevoplan_error_rfc">Verifica que el RFC tenga 12 o 13 dígitos</string>
</resources>